fix chat button alignment

--- a/src/components/layout/chat/chat.css
+++ b/src/components/layout/chat/chat.css
@@ -300,13 +300,12 @@
 .chat-btn {
   display: flex;
   flex-direction: row;
-  vertical-align: top;
+  align-items: center;
   border-radius: 0px 10px 10px 0px;
   color: white;
   border: 0px;
   font-size: 16px;
   padding: 7px 14px 7px 14px;
-  /* margin: 2px; */
   background: -webkit-linear-gradient(-45deg, #954ed6 0%, #009bee 100%);
   margin: 0;
 }
